emitter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: emitter
  name: emitter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emitter
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: emitter
    spec:
      containers:
        - image: ghcr.io/felixlut/wordhandler/emitter:kubernetes
          imagePullPolicy: Always
          name: emitter
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
status: {}
