receiver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: receiver
  name: receiver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: receiver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: receiver
    spec:
      containers:
        - image: ghcr.io/felixlut/wordhandler/receiver:kubernetes
          imagePullPolicy: IfNotPresent
          name: receiver
          ports:
            - containerPort: 8899
            - containerPort: 9988
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
status: {}
