receiver-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: receiver-tcp
  name: receiver-tcp
spec:
  ports:
    - name: "8899"
      port: 8899
      targetPort: 8899
    - name: "9988"
      port: 9988
      targetPort: 9988
  selector:
    io.kompose.service: receiver
  type: LoadBalancer
status:
  loadBalancer: {}
