ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: receiver
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: receiver
                port:
                  number: 8899
